[package]
name = "epic-counter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
axum = "0.5.1"
dashmap = "5.2.0"
futures-util = "0.3.21"
lazy_static = "1.4.0"
tokio = { version = "1.18.4", features = ["rt-multi-thread", "fs", "macros", "signal", "time", "sync"] }
sqlx = { version = "0.5.13", features = ["postgres", "runtime-tokio-rustls", "uuid"] }
